Add factory and fix stuff
